# tsb-hb

./: .gitignore  README.md  TSBHB.ipynb  TSBHB_v2.ipynb  TSBHB_v3.ipynb  pyproject.toml  requirements.txt
experiments/expected/: grid_summary.csv  point_metrics.csv
lightning_logs/version_0/: events.out.tfevents.1763313584.Brianbook.local  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1763313641.Brianbook.local  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1763315892.Brianbook.local  hparams.yaml
lightning_logs/version_3/: events.out.tfevents.1763315896.Brianbook.local  hparams.yaml
lightning_logs/version_4/: events.out.tfevents.1763317118.Brianbook.local  hparams.yaml
lightning_logs/version_5/: events.out.tfevents.1763318012.Brianbook.local  hparams.yaml
scripts/: convert_m5_to_long.py
src/: data_loading.py  metrics.py  plotting.py  utils.py
src/experiments/: run_ablation.py  run_coverage_pit.py  run_deepar.py  run_deepar_original.py  run_grid.py  run_point.py  run_prob.py
src/models/: dl_benchmark.py  tsb_hb.py
src/tools/: convert_m5_to_long.py
src/tsbhb/: __init__.py  data_loading.py  metrics.py  utils.py
src/tsbhb/experiments/: run_ablation.py  run_coverage_pit.py  run_deepar.py  run_grid.py  run_point.py  run_prob.py
src/tsbhb/models/: baselines.py  tsb_hb.py
src/visualization/: generate_paper_figures.py  replot_pit_histogram.py
tests/: conftest.py  test_regression_outputs.py
